--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
         border-top-right-radius: 10px;
       }
 
+      .small-pic {
+        width: 60%;
+      }
+
     </style>
 
 
@@ -104,7 +108,7 @@
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Spotify Match</h5>
               <p class="card-text">An app that calculates how two spotify users music tastes' differ from each other</p>
-              <a href="https://spotify-genrematch.herokuapp.com" class="btn btn-primary mt-auto" style="width: 100px;"">See More</a>
+              <a href="https://spotify-genrematch.herokuapp.com" class="btn btn-primary mt-auto" style="width: 100px;">See More</a>
             </div>
           </div>
         </div>
@@ -159,7 +163,7 @@
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Kruskal Count</h5>
               <p class="card-text">  An analysis of the Kruskal Count convergence rates applied to language from varying numbers of starting points.</p>
-              <a href="https://github.com/johnwashburne/public-vs-private/blob/master/README.md" class="btn btn-primary mt-auto" style="width: 100px;"" >See More</a>
+              <a href="https://github.com/johnwashburne/kruskal-count/blob/master/README.md" class="btn btn-primary mt-auto" style="width: 100px;"" >See More</a>
             </div>
           </div>
         </div>
