--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <img class="card-img-top" src="static/pc-thumbnail.png" alt="Card image cap">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">R/PoliticalCompassMemes User Flair Representation</h5>
-              <p class="card-text"> An investigation of the reqresentation of different political ideologies on the subreddit r/PoliticalCompassMemes</p>
+              <p class="card-text"> An investigation of the representation of different political ideologies on the subreddit r/PoliticalCompassMemes</p>
               <a href="https://github.com/johnwashburne/PCM-User-Flairs/blob/master/README.md" class="btn btn-primary mt-auto" style="width: 100px;">See More</a>
             </div>
           </div>
