--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">CU Exchange</h5>
               <p class="card-text"> An online exchange for Clemson student football tickets (Winner of CUHackit HelloWorld 2019)</p>
-              <a href="http://cuexchange.xyz/" class="btn btn-primary mt-auto" style="width: 100px;"">See More</a>
+              <a href="http://cuexchange.xyz/" class="btn btn-primary mt-auto" style="width: 100px;">See More</a>
             </div>
           </div>
         </div>
