--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Instagram Insights 1</h5>
               <p class="card-text"> An investigation into the network created by those a user follow and who follows them on Instagram (hopefully to be continued soon!)</p>
-              <a href="https://github.com/johnwashburne/Instagram-Insights/blob/master/README.md" class="btn btn-primary mt-auto" style="width: 100px;"">See More</a>
+              <a href="https://github.com/johnwashburne/Instagram-Insights/blob/master/README.md" class="btn btn-primary mt-auto" style="width: 100px;">See More</a>
             </div>
           </div>
         </div>
@@ -141,7 +141,7 @@
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">AP Top 25 Height and Weight</h5>
               <p class="card-text"> An exploration of the distribution of heights and weights of the NCAA football teams in the AP Top 25</p>
-              <a href="https://github.com/johnwashburne/AP25-Ht-Wt/blob/master/README.md" class="btn btn-primary mt-auto" style="width: 100px;"">See More</a>
+              <a href="https://github.com/johnwashburne/AP25-Ht-Wt/blob/master/README.md" class="btn btn-primary mt-auto" style="width: 100px;">See More</a>
             </div>
           </div>
         </div>
@@ -152,7 +152,7 @@
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Acceptance and Retention</h5>
               <p class="card-text">  A look at the correlation between acceptance and retention rates at US universities.</p>
-              <a href="https://github.com/johnwashburne/Acceptance-and-Retention/blob/master/README.md" class="btn btn-primary mt-auto" style="width: 100px;"">See More</a>
+              <a href="https://github.com/johnwashburne/Acceptance-and-Retention/blob/master/README.md" class="btn btn-primary mt-auto" style="width: 100px;">See More</a>
             </div>
           </div>
         </div>
@@ -163,7 +163,7 @@
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Kruskal Count</h5>
               <p class="card-text">  An analysis of the Kruskal Count convergence rates applied to language from varying numbers of starting points.</p>
-              <a href="https://github.com/johnwashburne/kruskal-count/blob/master/README.md" class="btn btn-primary mt-auto" style="width: 100px;"" >See More</a>
+              <a href="https://github.com/johnwashburne/kruskal-count/blob/master/README.md" class="btn btn-primary mt-auto" style="width: 100px;">See More</a>
             </div>
           </div>
         </div>
