--- a/index.html
+++ b/index.html
@@ -102,6 +102,18 @@
 
         <div class="col-lg-4 col-md-6 col-sm-12">
           <div class="card align-middle">
+            <img class="card-img-top" src="static/kuratoro-thumbnail.png" alt="Card image cap">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">Kuratoro</h5>
+              <p class="card-text"> Runner Up: Equity at HackSC 2020. "The limits of my language mean the limits of my world.” – Ludwig Wittgenstein... That shouldn't be the case</p>
+              <a href="https://devpost.com/software/kuratoro" class="btn btn-primary mt-auto" style="width: 100px;">See More</a>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="card align-middle">
             <img class="card-img-top" src="static/dome-thumbnail.png" alt="Card image cap">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Bowl Game Location</h5>
