--- a/index.html
+++ b/index.html
@@ -102,6 +102,17 @@
 
         <div class="col-lg-4 col-md-6 col-sm-12">
           <div class="card align-middle">
+            <img class="card-img-top" src="static/leaddog-thumbnail.png" alt="Card image cap">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">Lead Dog</h5>
+              <p class="card-text"> Winner: Best Use of MongoDB at Hacklytics 2020. A machine learning based approach to growing one's Instagram following.</p>
+              <a href="https://devpost.com/software/lead-dog" class="btn btn-primary mt-auto" style="width: 100px;">See More</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="card align-middle">
             <img class="card-img-top" src="static/kuratoro-thumbnail.png" alt="Card image cap">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Kuratoro</h5>
