--- a/gta.html
+++ b/gta.html
@@ -15,6 +15,11 @@
         padding-left: 75px;
         padding-right: 75px;
       }
+
+      .results {
+        padding-top: 30px;
+      }
+      }
     </style>
 
     <div class="title" style="padding-top: 40px">
@@ -27,7 +32,7 @@
 
       <div class="form">
         <div class="row">
-          <div class="col-xs-12 col-sm-6 col-lg-4">
+          <div class="col-xs-12 col-lg-4">
             <div class="form-group">
               <label for="exampleInputEmail1">Horse 1</label>
               <input type="text" class="form-control" id="p1" aria-describedby="emailHelp" placeholder="Horse 1 odds: _/1">
