--- a/gta.html
+++ b/gta.html
@@ -122,7 +122,7 @@
         x = x.toString();
         x = x + "%";
         document.getElementById("result").innerHTML = x;
-        document.getElementById("chips").innerHTML = y;
+        document.getElementById("bet").innerHTML = y;
       }
     </script>
   </body>
