--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="section-inner">
               <h2 class="heading">About Me</h2>
                 <div class="content">
-                  <p>I am a first-year Computer Science and Mathematical Sciences double major at Clemson University. I am interested in all things software development, but especially data science/visualization and areas where software and math converge.</p>
+                  <p>I am a sophomore Computer Science major at the Georgia Institute of Technology. I am interested in all things software development, but especially data science/visualization and areas where software and math converge.</p>
                   <a href="https://www.linkedin.com/in/john-w-973487120/" class="icon-link"><i class="fa fa-linkedin-square" style="font-size:48px"></i></a>
                   <a href="https://github.com/johnwashburne" class="icon-link"><i class="fa fa-github" style="font-size:48px; margin-left:20px"></i></a>
                   <a href="https://johnwashburne.com/resume.pdf" class="icon-link"><i class="fa fa-file" style="font-size:42px; margin-left:20px"></i></a>
