--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <img class="card-img-top" src="static/gta-thumbnail.png" alt="Card image cap">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">GTA V Casino Expected Return</h5>
-              <p class="card-text">Mathematically guarantee a long term profit at the casino in Grand Theft Auto by appropriatly sizing bets according to expected return.</p>
+              <p class="card-text">Mathematically guarantee a long term profit at the casino in Grand Theft Auto by appropriately sizing bets according to expected return.</p>
               <a href="/gta" class="btn btn-primary mt-auto" style="width: 100px;">See More</a>
             </div>
           </div>
