--- a/index.html
+++ b/index.html
@@ -17,14 +17,7 @@
         background-color: #cccccc
       }
 
-      .nav-item {
-        font-size: 20px;
-        margin-right: 30px;
-      }
-      .navbar-brand {
-        font-size: 25px;
-        margin-left: 30px
-      }
+
 
       .profile-pic {
         border-radius: 50%;
@@ -39,7 +32,7 @@
       }
 
       .header-info {
-        margin: 100px 7px 20px;
+        margin: 20px 7px 20px;
         background-color: white;
         padding: 25px;
         border-radius: 10px;
@@ -58,13 +51,31 @@
 
     </style>
 
-
+   <!--
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
         <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2"></div>
         <div class="mx-auto order-0">
             <a class="navbar-brand mx-auto" href="#">John Washburne Jr. </a>
         </div>
         <div class="navbar w-100 order-3"></div>
+    </nav>
+  -->
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="/">John Washburne</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="/https://johnwashburne.com/resume.pdf">Resume</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://johnwashburne.com/reading-list">Reading List</a>
+          </li>
+      </div>
     </nav>
 
 
