--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="section-inner">
               <h2 class="heading">About Me</h2>
                 <div class="content">
-                  <p>I am a sophomore Computer Science major at the Georgia Institute of Technology. I am interested in all things software development, but especially data science/visualization and areas where software and math converge.</p>
+                  <p>I am a rising 3rd-year Computer Science major at the Georgia Institute of Technology with concentrations in Artifitial Intelligence and Modeling/Simulation. I am interested in all things software development, but am especially interested in the intersection of computer science and finance.</p>
                   <a href="https://www.linkedin.com/in/john-w-973487120/" class="icon-link"><i class="fa fa-linkedin-square" style="font-size:48px"></i></a>
                   <a href="https://github.com/johnwashburne" class="icon-link"><i class="fa fa-github" style="font-size:48px; margin-left:20px"></i></a>
                   <a href="https://johnwashburne.com/resume.pdf" class="icon-link"><i class="fa fa-file" style="font-size:42px; margin-left:20px"></i></a>
