--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               <h2 class="heading">About Me</h2>
                 <div class="content">
                   <p>I am a rising 3rd-year Computer Science major at the Georgia Institute of Technology with concentrations in Artifitial Intelligence and Modeling/Simulation. I am interested in all things software development, but am especially interested in the intersection of computer science and finance.</p>
-                  <a href="https://www.linkedin.com/in/john-w-973487120/" class="icon-link"><i class="fa fa-linkedin-square" style="font-size:48px"></i></a>
+                  <a href="https://www.linkedin.com/in/john-washburne-jr-973487120?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3Bga53xTs6RvuFIJpcP6NE6w%3D%3D" class="icon-link"><i class="fa fa-linkedin-square" style="font-size:48px"></i></a>
                   <a href="https://github.com/johnwashburne" class="icon-link"><i class="fa fa-github" style="font-size:48px; margin-left:20px"></i></a>
                   <a href="https://johnwashburne.com/resume.pdf" class="icon-link"><i class="fa fa-file" style="font-size:42px; margin-left:20px"></i></a>
                 </div><!--//content-->
@@ -142,6 +142,17 @@
               <h5 class="card-title">GTA V Casino Expected Return</h5>
               <p class="card-text">Mathematically guarantee a long term profit at the casino in Grand Theft Auto by appropriately sizing bets according to expected return.</p>
               <a href="/gta" class="btn btn-primary mt-auto" style="width: 100px;">See More</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="card align-middle">
+            <img class="card-img-top" src="static/gt-thumbnail.png" alt="Card image cap">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">GT Major Grade Distribution</h5>
+              <p class="card-text">An analysis of grade distrubtion by major at Georgia Tech</p>
+              <a href="https://github.com/johnwashburne/major-gpa" class="btn btn-primary mt-auto" style="width: 100px;">See More</a>
             </div>
           </div>
         </div>
