--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="section-inner">
               <h2 class="heading">About Me</h2>
                 <div class="content">
-                  <p>I am a 3rd-year Computer Science major at the Georgia Institute of Technology with concentrations in Artifitial Intelligence and Modeling/Simulation. I am interested in all things software development, but am especially interested in the intersection of computer science and finance.</p>
+                  <p>I am a Senior Computer Science major at the Georgia Institute of Technology with concentrations in Artifitial Intelligence and Modeling/Simulation. I am interested in all things software development, but am especially interested in the intersection of computer science and finance.</p>
                   <a href="https://www.linkedin.com/in/john-washburne-jr-973487120?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3Bga53xTs6RvuFIJpcP6NE6w%3D%3D" class="icon-link"><i class="fa fa-linkedin-square" style="font-size:48px"></i></a>
                   <a href="https://github.com/johnwashburne" class="icon-link"><i class="fa fa-github" style="font-size:48px; margin-left:20px"></i></a>
                   <a href="https://johnwashburne.com/resume.pdf" class="icon-link"><i class="fa fa-file" style="font-size:42px; margin-left:20px"></i></a>
@@ -188,28 +188,6 @@
 
         <div class="col-lg-4 col-md-6 col-sm-12">
           <div class="card align-middle">
-            <img class="card-img-top" src="static/spotify-thumbnail.png" alt="Card image cap">
-            <div class="card-body d-flex flex-column">
-              <h5 class="card-title">Spotify Match</h5>
-              <p class="card-text">An app that calculates how two spotify users music tastes' differ from each other</p>
-              <a href="https://spotify-genrematch.herokuapp.com" class="btn btn-primary mt-auto" style="width: 100px;">See More</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="card align-middle">
-            <img class="card-img-top" src="static/cuexchange-thumbnail.png" alt="Card image cap">
-            <div class="card-body d-flex flex-column">
-              <h5 class="card-title">CU Exchange</h5>
-              <p class="card-text"> An online exchange for Clemson student football tickets (Winner of CUHackit HelloWorld 2019)</p>
-              <a href="http://cuexchange.xyz/" class="btn btn-primary mt-auto" style="width: 100px;">See More</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="card align-middle">
             <img class="card-img-top" src="static/cfp-thumbnail.png" alt="Card image cap">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">AP Top 25 Height and Weight</h5>
@@ -226,17 +204,6 @@
               <h5 class="card-title">Acceptance and Retention</h5>
               <p class="card-text">  A look at the correlation between acceptance and retention rates at US universities.</p>
               <a href="https://github.com/johnwashburne/Acceptance-and-Retention/blob/master/README.md" class="btn btn-primary mt-auto" style="width: 100px;">See More</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="card align-middle">
-            <img class="card-img-top" src="static/kruskal-thumbnail.png" alt="Card image cap">
-            <div class="card-body d-flex flex-column">
-              <h5 class="card-title">Kruskal Count</h5>
-              <p class="card-text">  An analysis of the Kruskal Count convergence rates applied to language from varying numbers of starting points.</p>
-              <a href="https://github.com/johnwashburne/kruskal-count/blob/master/README.md" class="btn btn-primary mt-auto" style="width: 100px;" >See More</a>
             </div>
           </div>
         </div>
@@ -262,8 +229,6 @@
             </div>
           </div>
         </div>
-
-
 
     </div>
     </div>
