--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <div class="card align-middle">
             <img class="card-img-top" src="static/leaddog-thumbnail.png" alt="Card image cap">
             <div class="card-body d-flex flex-column">
-              <h5 class="card-title">Lead Dog</h5>
+              <h5 class="card-title">Hacklytics 2020</h5>
               <p class="card-text"> Winner: Best Use of MongoDB at Hacklytics 2020. A machine learning based approach to growing one's Instagram following.</p>
               <a href="https://devpost.com/software/lead-dog" class="btn btn-primary mt-auto" style="width: 100px;">See More</a>
             </div>
@@ -133,7 +133,7 @@
           <div class="card align-middle">
             <img class="card-img-top" src="static/kuratoro-thumbnail.png" alt="Card image cap">
             <div class="card-body d-flex flex-column">
-              <h5 class="card-title">Kuratoro</h5>
+              <h5 class="card-title">HackSC 2020</h5>
               <p class="card-text"> Runner Up: Equity at HackSC 2020. "The limits of my language mean the limits of my world.” – Ludwig Wittgenstein... That shouldn't be the case</p>
               <a href="https://devpost.com/software/kuratoro" class="btn btn-primary mt-auto" style="width: 100px;">See More</a>
             </div>
@@ -159,18 +159,6 @@
               <p class="card-text">An analysis of grade distrubtion by major at Georgia Tech</p>
               <a href="https://github.com/johnwashburne/major-gpa" class="btn btn-primary mt-auto" style="width: 100px;">See More</a>
             </div>
-          </div>
-        </div>
-
-
-        <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="card align-middle">
-            <img class="card-img-top" src="static/instagram-thumbnail.png" alt="Card image cap">
-              <div class="card-body d-flex flex-column">
-                <h5 class="card-title">Instagram Insights 1</h5>
-                <p class="card-text"> An investigation into the network created by those a user follow and who follows them on Instagram (hopefully to be continued soon!)</p>
-                <a href="https://github.com/johnwashburne/Instagram-Insights/blob/master/README.md" class="btn btn-primary mt-auto" style="width: 100px;">See More</a>
-              </div>
           </div>
         </div>
 
