--- a/index.html
+++ b/index.html
@@ -120,6 +120,17 @@
 
         <div class="col-lg-4 col-md-6 col-sm-12">
           <div class="card align-middle">
+            <img class="card-img-top" src="static/polygon-thumbnail.png" alt="Card image cap">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">Polygon.io Backtester</h5>
+              <p class="card-text"> Backtesting framework developed for the GTSF Investments Committee Quant Sector using data from Polygon.io</p>
+              <a href="https://github.com/johnwashburne/polygon-io-backtester" class="btn btn-primary mt-auto" style="width: 100px;">See More</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="card align-middle">
             <img class="card-img-top" src="static/leaddog-thumbnail.png" alt="Card image cap">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Hacklytics 2020</h5>
