--- a/index.html
+++ b/index.html
@@ -131,6 +131,28 @@
 
         <div class="col-lg-4 col-md-6 col-sm-12">
           <div class="card align-middle">
+            <img class="card-img-top" src="static/crypto-thumbnail.png" alt="Card image cap">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">Cryptocurrency Price Aggregator</h5>
+              <p class="card-text">Aggregate the best bid and offer for a wide variety of currency pairs across several exchanges. Project to learn Go.</p>
+              <a href="https://github.com/johnwashburne/Crypto-Price-Aggregator" class="btn btn-primary mt-auto" style="width: 100px;">See More</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="card align-middle">
+            <img class="card-img-top" src="static/dice-thumbnail.png" alt="Card image cap">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">Threes Solver</h5>
+              <p class="card-text">A Monte Carlo method of choosing optimal action in the dice game Threes</p>
+              <a href="https://github.com/johnwashburne/Threes-Solver" class="btn btn-primary mt-auto" style="width: 100px;">See More</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="card align-middle">
             <img class="card-img-top" src="static/leaddog-thumbnail.png" alt="Card image cap">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Hacklytics 2020</h5>
@@ -169,39 +191,6 @@
               <h5 class="card-title">GT Major Grade Distribution</h5>
               <p class="card-text">An analysis of grade distrubtion by major at Georgia Tech</p>
               <a href="https://github.com/johnwashburne/major-gpa" class="btn btn-primary mt-auto" style="width: 100px;">See More</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="card align-middle">
-            <img class="card-img-top" src="static/cfp-thumbnail.png" alt="Card image cap">
-            <div class="card-body d-flex flex-column">
-              <h5 class="card-title">AP Top 25 Height and Weight</h5>
-              <p class="card-text"> An exploration of the distribution of heights and weights of the NCAA football teams in the AP Top 25</p>
-              <a href="https://github.com/johnwashburne/AP25-Ht-Wt/blob/master/README.md" class="btn btn-primary mt-auto" style="width: 100px;">See More</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="card align-middle">
-            <img class="card-img-top" src="static/usnews-thumbnail.png" alt="Card image cap">
-            <div class="card-body d-flex flex-column">
-              <h5 class="card-title">Acceptance and Retention</h5>
-              <p class="card-text">  A look at the correlation between acceptance and retention rates at US universities.</p>
-              <a href="https://github.com/johnwashburne/Acceptance-and-Retention/blob/master/README.md" class="btn btn-primary mt-auto" style="width: 100px;">See More</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="card align-middle">
-            <img class="card-img-top" src="static/pc-thumbnail.png" alt="Card image cap">
-            <div class="card-body d-flex flex-column">
-              <h5 class="card-title">R/PoliticalCompassMemes User Flair Representation</h5>
-              <p class="card-text"> An investigation of the reqresentation of different political ideologies on the subreddit r/PoliticalCompassMemes</p>
-              <a href="https://github.com/johnwashburne/PCM-User-Flairs/blob/master/README.md" class="btn btn-primary mt-auto" style="width: 100px;">See More</a>
             </div>
           </div>
         </div>
